Se agregaron eventos de click a las tarjetas y se cambio la foto de perfil

--- a/index.html
+++ b/index.html
@@ -42,27 +42,23 @@
                     <h2>Projects</h2>
                 </div>
                 <!-- Tarjeta de la to do app -->
-                <div>
-                    <div class="card_project_todoapp">
-                        <figure>
-                            <img src="./Assets/Images/todoapp.png" alt="imagen de to-do-app">
-                        </figure>
-                        <div>
-                            <p>To do app</p>
-                            <a href="#">https://github.com</a>
-                        </div>
+                <div class="card_project_todoapp" id="card_project_todoapp">
+                    <figure>
+                        <img src="./Assets/Images/todoapp.png" alt="imagen de to-do-app">
+                    </figure>
+                    <div>
+                        <p>To do app</p>
+                        <a href="#">https://github.com</a>
                     </div>
                 </div>
                 <!-- Tarjeta del website -->
-                <div>
-                    <div class="card_project_website">
-                        <figure>
-                            <img src="./Assets/Images/website.png" alt="imagen de website">
-                        </figure>
-                        <div>
-                            <p>website</p>
-                            <a href="#">https://github.com</a>
-                        </div>
+                <div class="card_project_website">
+                    <figure>
+                        <img src="./Assets/Images/website.png" alt="imagen de website">
+                    </figure>
+                    <div>
+                        <p>website</p>
+                        <a href="#">https://github.com</a>
                     </div>
                 </div>
             </div>
@@ -81,7 +77,7 @@
                                 </figure>
                                 <div>
                                     <p>GitHub</p>
-                                    <input type="button" value="Follow">
+                                    <input id="button_github" type="button" value="Follow">
                                 </div>
                             </div>
                             <!-- Tarjeta de linkedin -->
@@ -91,7 +87,7 @@
                                 </figure>
                                 <div>
                                     <p>LinkedIn</p>
-                                    <input type="button" value="Follow">
+                                    <input id="button_linkedin" type="button" value="Follow">
                                 </div>
                             </div>
                             <!-- Tarjeta de youtube -->
@@ -101,7 +97,7 @@
                                 </figure>
                                 <div>
                                     <p>YouTube</p>
-                                    <input type="button" value="Follow">
+                                    <input id="button_youtube" type="button" value="Follow">
                                 </div>
                             </div>
                             <!-- Tarjeta de instagram -->
@@ -111,7 +107,7 @@
                                 </figure>
                                 <div>
                                     <p>Instagram</p>
-                                    <input type="button" value="Follow">
+                                    <input id="button_instagram" type="button" value="Follow">
                                 </div>
                             </div>
                         </div>
@@ -157,12 +153,12 @@
                                     <img src="./Assets/Images/sports.jpg" alt="icono de deportes">
                                 </figure>
                                 <div>
-                                    <p>Videogames</p>
+                                    <p>Sports</p>
                                 </div>
                             </div>
                         </div>
+                    </div>
                 </div>
-            </div>
 
         </section>
     </main>
@@ -172,6 +168,7 @@
             <input type="button" value="Contact me">
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
