Se agrega funcionalidad al boton de Contact Me

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     </main>
     <!-- Aqui va el footer -->
     <footer>
-        <div>
+        <form id="form_contact">
             <input type="button" value="Contact me">
-        </div>
+        </form>
     </footer>
     <script src="script.js"></script>
 </body>
